# slopsmith-desktop

./: .build-config.json  CMakeLists.txt  README.md  package.json
.github/workflows/: build.yml  ci.yml  nightly.yml  release.yml  ship-ci.yml
.packages/: apt.txt  brew.txt  python.txt
cmake/: onnxruntime.cmake
docs/: CAPABILITY-MIGRATION.md  MULTI-CHAIN-DESIGN.md  SANDBOX-DESIGN.md
scripts/: build-audio.sh  build-common.sh  build-macos.sh  bundle-python.sh  bundle-slopsmith.sh  fix-onnxruntime-install-names.sh
src/audio/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  ChordScorer.cpp  ChordScorer.h  InputRingReader.h  NodeAddon.cpp  NoteVerifier.cpp  NoteVerifier.h  OnsetDetector.cpp  OnsetDetector.h  SourceChain.cpp  SourceChain.h  VSTHost.cpp  VSTHost.h
src/audio/Sandbox/: ControlChannel.h  ControlChannel_posix.cpp  ControlChannel_win.cpp  SandboxFactory_shared.cpp  SandboxFactory_win.cpp  SandboxedProcessor.cpp  SandboxedProcessor.h  SubprocessHandle_posix.cpp
src/main/: audio-bridge.ts  audio-effects-executor.ts  debug-log.ts  ipc-channels.ts  main.ts  plugin-manager.ts  preload.ts  python.ts  soundfont-manager.ts  vst-crash-guard.ts
src/renderer/: plugin.json  screen.html  screen.js
src/renderer/plugin-manager/: screen.html  screen.js
src/vst-host/: CMakeLists.txt  VSTScan.cpp  main.cpp
tests/: audio-effects-executor.test.js  ml-note-detection.test.js  multi-source.test.js  renderer-capability-migration.test.js
tests/chordscorer/: .gitignore  CMakeLists.txt  bench.cpp
tests/chordscorer/calibration/: chart.txt  make_calibration.py  notes.csv  score.md  wrong_position.md
tests/sandbox/: control_channel_test.cpp
tests/sandbox/e2e/: CMakeLists.txt  e2e_test.cpp  leak_test.sh
